--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ github:
 # Social Integration
 social:
   twitter:        ljupcho3a
-  disqus:         disqus_3NBsKK8nT3
+  disqus:         ljupchogithubio
 # Custom vars
 version:             1.0.0
 
