--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ github:
 social:
   twitter:        ljupcho3a
   disqus:         ljupchogithubio
+  addthis_pubid:  ra-571a96a3a515f05b
 # Custom vars
 version:             1.0.0
 
